:bug: Fixing Message view text overflow

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -20,6 +20,10 @@
     }
 }
 
+.message-content {
+    word-break: break-all;
+}
+
 .message-timestamp {
     color: #aaa;
     font-size: 0.9rem;
